Archive2/a1/a53f3a533c17aa/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:41:5: error: could not convert ‘(const char*)"arf"’ from ‘const char*’ to ‘testa<const char>’
     };
     ^
main.cpp:39:15: warning: unused variable ‘aggregatetest’ [-Wunused-variable]
     aggregate aggregatetest[] = {
               ^
